# calculator-challenge

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  api.py  app.py  pyproject.toml
backend/calculation/: __init__.py  calculate.py  exceptions.py  lexer.py  nodes.py  tokenize.py  tokens.py
backend/parse_json/: __init__.py  exceptions.py  lexer.py  tokenize.py  tokens.py
backend/tests/: test_api.py  test_calculate.py  test_evaluate.py  test_lexer.py  test_parse_json.py  test_tokenize.py
calculation/: calculate.py  lexer.py  tokens.py
frontend/: index.html
tests/: test_evaluate.py  test_lexer.py  test_tokenize.py
